<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signon_title"
        style="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_email"
        style="@style/TextStyle"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        />

    <EditText
        android:id="@+id/inputUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toBottomOf="@id/txtUserEmail"
        android:hint="@string/txt_login_hint_email"
        android:textSize="@dimen/text_size_small"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_password"
        style="@style/TextStyle"
        app:layout_constraintTop_toBottomOf="@id/inputUserEmail"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_large"/>

    <EditText
        android:id="@+id/inputUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toBottomOf="@id/txtUserPassword"
        android:hint="@string/txt_login_hint_password"
        android:textSize="@dimen/text_size_small"
        android:inputType="textPassword"
        android:maxLines="1"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btnSignOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_signon_title"
        style="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/inputUserPassword"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/btnSignOn"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:text="@string/txt_signon_inciar_Sesion"
        style="@style/TextStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
